trying to fix an overflow problems in bapp browser windows

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -264,7 +264,7 @@ p strong {
     width: 70%;
   }
 }
-@media (max-height: 620px) {
+@media (max-height: 740px) {
   .vox .portfolio__content__text {
     width: 40%;
   }
