--- a/src/scss/pages/_portfolio.scss
+++ b/src/scss/pages/_portfolio.scss
@@ -107,7 +107,7 @@
             width: 70%;
         }
     }
-    @media ( max-height: 620px ) {
+    @media ( max-height: 740px ) {
         .portfolio__content__text {
             width: 40%;
         }
